fix for context menu not showing up when editor is placed within a modal

--- a/src/assets/quill-better-table.scss
+++ b/src/assets/quill-better-table.scss
@@ -47,7 +47,7 @@ table.quill-better-table {
   background-color: #fff;
   box-shadow: 0 2px 8px rgba(0, 0, 0, .15);
   font-size: 14px;
-  z-index: 100;
+  z-index: 1300;
   overflow: hidden;
 
   .qlbt-operation-menu-dividing {
